--- a/src/components/flanpage/HowToBuy.css
+++ b/src/components/flanpage/HowToBuy.css
@@ -1,4 +1,5 @@
 .how-to-buy-section {
+    height: 100%;
     background: linear-gradient(to bottom, #47677D, #414775, #402D5C, #3F1939); /* Degradado vertical con #47677D en la parte superior */
     padding: 50px 20px;
     display: flex;
@@ -68,6 +69,8 @@
   }
 
   
+
+  
   @keyframes fadeIn {
     0% {
       opacity: 0;
@@ -82,6 +85,49 @@
   .how-to-buy-step {
     animation: fadeIn 0.6s ease-in-out;
   }
+
+  .jupiter-widget-container {
+    width: 100%;
+    max-width: 600px;
+    margin: 40px auto;
+    padding: 20px;
+    background-color: #1c1c1e; /* Fondo oscuro que se ajusta a tu esquema de colores */
+    border: 3px solid #00FFA3; /* Borde con el color de acento de tu diseño */
+    border-radius: 12px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.5);
+    position: relative;
+    z-index: 2;
+  }
+  
+  .jupiter-widget-container iframe {
+    width: 100%;
+    height: 600px;
+    border: none;
+    border-radius: 10px;
+    background-color: transparent; /* Asegurar que no haya fondo blanco detrás */
+  }
+  
+  .jupiter-widget-container h2,
+  .jupiter-widget-container p {
+    color: #fff; /* Asegurar que el texto sea visible sobre el fondo oscuro */
+    text-align: center;
+  }
+  
+  .jupiter-widget-container button {
+    background-color: #00FFA3; /* Ajustar color del botón */
+    color: #000;
+    padding: 10px 20px;
+    border-radius: 8px;
+    border: none;
+    font-family: 'Press Start 2P', sans-serif;
+    transition: background-color 0.3s ease;
+  }
+  
+  .jupiter-widget-container button:hover {
+    background-color: #00cc84; /* Efecto hover en el botón */
+  }
+  
+
   /* Media queries para tablets (pantallas de 768px a 1024px) */
 @media (max-width: 1024px) {
   .how-to-buy-step {
